ipc/ipdl/test/ipdl/error/managedNoCtor.ipdl
//error: constructor declaration required for managed protocol `managedNoCtor' (managed by protocol `managerNoCtor')

include protocol managerNoCtor;

protocol managedNoCtor {
    manager managerNoCtor;
    // empty
child: async __delete__();
};
